# pyproject.toml — bngsim Python package
#
# Build system: scikit-build-core + pybind11
# Usage: pip install . (from bngsim/ directory)
#        uv pip install . (preferred)

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
    # Note: scikit-build-core automatically provides ninja when needed,
    # so it should NOT be listed here (causes warnings).
]
build-backend = "scikit_build_core.build"

[project]
name = "bngsim"
version = "0.11.33"
description = "Embeddable simulation engine for BioNetGen reaction networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William S. Hlavacek"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    "python-libsbml>=5.20",
    # sympy is required by _codegen.py to chain-rule through derived
    # rate-constant parameters (BNG2.pl-emitted ``_rateLaw{N}``-style
    # ConstantExpressions, including non-product forms like ``5/MEK``).
    # Without it, ``_compute_derived_param_jacobian`` silently returns
    # None and codegen sensitivities for the underlying primary
    # parameters are wrong (issue #2 regression).
    "sympy>=1.10",
]

[project.urls]
Homepage = "https://github.com/lanl/bngsim"
Documentation = "https://bngsim.readthedocs.io"
Repository = "https://github.com/lanl/bngsim"
Changelog = "https://github.com/lanl/bngsim/blob/HEAD/CHANGELOG.md"
Issues = "https://github.com/lanl/bngsim/issues"

[project.optional-dependencies]
antimony = [
    # TODO: bump to antimony>=3.1.2 as soon as 3.1.2 is available on PyPI.
    "antimony>=3.1.1",
]
pandas = ["pandas>=2.0"]
hdf5 = ["h5py>=3.0"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # test_ssa_time_dependent_rate imports antimony at module scope.
    "antimony>=3.1.1",
    "scipy>=1.15",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "diffrax>=0.6",
]
# Optional Vivarium process shell (bngsim.vivarium, GH #102). vivarium-core's
# process interface is migrating to process-bigraph; the shell stays thin.
vivarium = ["vivarium-core>=1.6"]
benchmarks = [
    "bioservices>=1.11",
]
# Reference engine for the parity_checks/ cross-validation suites (and a few
# cross-validate tests that skip when it is absent). DEVELOPER-ONLY: RoadRunner
# is never a base dependency, so regular users never receive it in any form. The
# rr_parity matrix's per-model RoadRunner *load* timing additionally needs the
# source-instrumented fork (parity_checks/rr_parity/INSTRUMENTED_ROADRUNNER.md +
# dev/notes/build_instrumented_roadrunner.sh); stock libroadrunner here covers
# the correctness/oracle role.
roadrunner = [
    "libroadrunner>=2.7",
]
dev = [
    "bngsim[antimony,pandas,hdf5,test,jax,vivarium,benchmarks,roadrunner]",
    "ruff>=0.8",
    # Regenerates python/bngsim/_bngsim_core.pyi from the built extension in
    # scripts/rebuild_editable.py, keeping the type stub in sync with the C++
    # bindings so mypy does not drift into spurious attr-defined errors.
    "pybind11-stubgen>=2.5",
]

[project.scripts]
# SBML → .net network converter (GH #215). Also runnable as
# ``python -m bngsim.convert``.
bngsim-sbml2net = "bngsim.convert._cli:main"
# .net → SBML network converter (GH #216), the reverse direction.
bngsim-net2sbml = "bngsim.convert._cli:net2sbml_main"
# SBML → compartmental .bngl (cBNGL) writer (GH #224): recovers static volumes.
bngsim-sbml2bngl = "bngsim.convert._cli:sbml2bngl_main"
# Conversion-validation framework (GH #217): L0–L4 gate over either direction.
bngsim-validate-conversion = "bngsim.convert._cli:validate_main"
# COMBINE archive (.omex) packaging (GH #219): pack/unpack SBML + SED-ML + manifest.
bngsim-omex = "bngsim.convert._cli:omex_main"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = [
    "-DBNGSIM_BUILD_TESTS=OFF",
    "-DBNGSIM_BUILD_PYTHON=ON",
]
# Let CMake auto-detect generator (prefers Ninja, falls back to Unix Makefiles).
# ninja is in build-system.requires for wheel builds; for editable installs
# it uses whatever's in PATH, falling back gracefully if unavailable.
wheel.packages = ["python/bngsim"]
wheel.install-dir = "bngsim"
build-dir = "build/{wheel_tag}"
# Disable automatic rebuild on import for editable installs. While convenient,
# it causes import failures when the build environment (especially ninja from
# scikit-build-core) isn't persistently available at runtime. Developers
# should manually rebuild after C++ changes:
#   uv pip install -e . --force-reinstall --no-deps
# See issue #23.
editable.rebuild = false
sdist.exclude = [
    ".pytest_cache",
    ".venv",
    "benchmarks",
    "build",
    "dev",
    "harness",
    "python/bngsim/__pycache__",
    "python/bngsim/__pycache__/**",
    "python/bngsim/_bngsim_core*.dylib",
    "python/bngsim/_bngsim_core*.pyd",
    "python/bngsim/_bngsim_core*.so",
    "python/tests",
    "run_tests.sh",
    "scripts",
    "tests",
]
wheel.exclude = [
    "python/bngsim/__pycache__",
    "python/bngsim/__pycache__/**",
    "python/bngsim/_bngsim_core*.dylib",
    "python/bngsim/_bngsim_core*.pyd",
    "python/bngsim/_bngsim_core*.so",
]

[tool.scikit-build.cmake.define]
BNGSIM_BUILD_PYTHON = "ON"
# Every pip build — wheel AND sdist source-install — must get SuiteSparse/KLU or
# fail loudly with the GH #209 message, never a silent dense-only fallback (KLU is
# essential for efficiency on sparse networks). Defining it here guarantees it
# reaches CMake for all scikit-build-core builds; the cibuildwheel `environment`
# sets the same var but as a bare env var it does not reach CMake's option().
BNGSIM_REQUIRE_KLU = "ON"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.mypy]
python_version = "3.10"
files = ["python/bngsim"]
ignore_missing_imports = true
follow_imports = "silent"

[tool.ruff]
target-version = "py310"
line-length = 99
# Notebooks are interactive scratch/showcase content; lint via nbqa
# in CI if/when we want it, not as part of the Python source pass.
# benchmarks/temp is a tracked scratch area for one-off benchmark scripts kept
# so they don't get lost across machines; not held to the style bar.
extend-exclude = ["*.ipynb", "benchmarks/temp"]
# Apply excludes even when pre-commit passes file paths explicitly.
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Research/benchmark/showcase code: long format strings (LaTeX
# captions, multi-line doc messages, tabular output) are clearer
# on one line. Hard line-length is enforced for the shipped
# package + tests, not for these scripts.
"benchmarks/**" = ["E501"]
"harness/**" = ["E501"]
"scripts/**" = ["E501"]
"parity_checks/**" = ["E501"]

# These test modules embed long single-line SBML/MathML reference documents
# (one <sbml>/<species>/<reaction> chunk per line). XML inter-element and
# inter-attribute whitespace is insignificant, so the data is deliberately kept
# unwrapped for readability — reflowing it to 99 cols would only obscure the
# fixture. E501 stays enforced on the test *code*; only these fixture-dominated
# modules are exempt.
"python/tests/test_jacobian_selfcheck.py" = ["E501"]
"python/tests/test_rhs_nonneg_clamp.py" = ["E501"]
"python/tests/test_sbml_no_species_time.py" = ["E501"]
"python/tests/test_sbml_suite_grading.py" = ["E501"]
"python/tests/test_sbml_variable_volume_dilution.py" = ["E501"]

# ── cibuildwheel: binary wheels for Linux / macOS / Windows (GH #140) ─────────
# Wheels bundle SuiteSparse/KLU: BNGSIM_REQUIRE_KLU=ON makes a build that cannot
# find KLU fail loudly instead of silently shipping the dense-only fallback, and
# auditwheel/delocate/delvewheel then vendor the KLU shared libs into the wheel.
# SUNDIALS is fetched + statically linked by CMake (no runtime dependency).
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip musllinux (SuiteSparse on musl needs a source build — add later) and
# 32-bit targets. PyPy is already excluded by the cpXY-only `build` selector
# above (an explicit `pp*` skip trips a cibuildwheel v4 "invalid selector" warning).
skip = "*-musllinux_* *_i686 *-win32"
build-verbosity = 1
environment = { BNGSIM_ENABLE_KLU = "ON", BNGSIM_REQUIRE_KLU = "ON" }
# Smoke test: the wheel imports in a clean env AND KLU is actually bundled +
# loadable (HAS_KLU is False when the sparse solver was not linked).
test-command = 'python -c "import bngsim; print(bngsim.__version__); assert bngsim.HAS_KLU"'

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8 (has dnf); SuiteSparse/KLU comes from EPEL. Its
# klu.h lands in /usr/include/suitesparse — covered by the CMake find_path
# suffix. x86_64 only for now (aarch64 via QEMU is slow; add later).
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y epel-release && dnf install -y suitesparse-devel"

[tool.cibuildwheel.macos]
# SuiteSparse/KLU built FROM SOURCE (shared, KLU subset) at a low deployment
# target -> broad-compat wheels (brew's suite-sparse targets the runner OS, so
# delocate forced a runner-OS wheel tag). Installs to $HOME/suitesparse; delocate
# bundles the dylibs. See ci/build_suitesparse.sh (reads MACOSX_DEPLOYMENT_TARGET
# so the dylibs' min target matches the wheel's).
before-all = "bash ci/build_suitesparse.sh $HOME/suitesparse"
environment = { BNGSIM_ENABLE_KLU = "ON", BNGSIM_REQUIRE_KLU = "ON", SUITESPARSE_ROOT = "$HOME/suitesparse", CMAKE_PREFIX_PATH = "$HOME/suitesparse" }

[tool.cibuildwheel.windows]
# SuiteSparse/KLU built FROM SOURCE (shared, KLU subset) with MSVC -> the
# amd/colamd/btf import libs SUNDIALS' KLU TPL needs (vcpkg ships only
# klu+suitesparseconfig -> AMD/COLAMD/BTF_LIBRARY-NOTFOUND). Installs to
# C:/suitesparse; delvewheel bundles the DLLs from C:/suitesparse/bin.
# See ci/build_suitesparse.ps1.
before-all = "powershell -ExecutionPolicy Bypass -File ci/build_suitesparse.ps1 -Prefix C:/suitesparse"
before-build = "pip install delvewheel"
environment = { BNGSIM_ENABLE_KLU = "ON", BNGSIM_REQUIRE_KLU = "ON", SUITESPARSE_ROOT = "C:/suitesparse", CMAKE_PREFIX_PATH = "C:/suitesparse" }
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path C:/suitesparse/bin"
